fix: profile picture spacing

--- a/client/src/styles/loading.scss
+++ b/client/src/styles/loading.scss
@@ -179,12 +179,7 @@
 }
 
 .previewUserIcon-wrapper {
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
     display: inline-block;
-    margin: .4em .6em .4em .6em;
-    border: 1px solid #E5E5E5;
 }
 
 .previewImage-wrapper {
@@ -193,12 +188,7 @@
 }
 
 .postUserIcon-wrapper {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
     display: inline-block;
-    margin: .4em .8em .4em .6em;
-    border: 1px solid #E5E5E5;
 }
 
 .profileIcon-wrapper {
